test/gpu/native/basics/blockSizeNotIntegral.good
blockSizeNotIntegral.chpl:3: error: '@gpu.blockSize' attribute must have exactly one argument: an integral value for the block size
