test/gpu/native/basics/blockSizeNotIntegral.chpl
on here.gpus[0] {
  @gpu.blockSize(128.1)
  foreach 1..128 {

  }
}
